color of default-dark-button. Fixes cancel button test too dark in submit and message compose views.

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -8585,7 +8585,7 @@ md-menu-content md-menu-item.rp-link-menu-item button#context:hover span {
   background-color: #3e4451 !important;
 }
 .rp-night-theme .default-dark-button {
-  color: #565c64 !important;
+  color: #abb2bf !important;
   background-color: #3e4451 !important;
 }
 .rp-night-theme .default-dark-button span {
@@ -8907,7 +8907,7 @@ md-menu-content md-menu-item.rp-link-menu-item button#context:hover span {
   background: transparent !important;
 }
 .rp-night-theme .rp-form-inner .rp-submit-cancel-button {
-  color: #565c64 !important;
+  color: #abb2bf !important;
   background-color: #3e4451 !important;
 }
 .rp-night-theme .rp-form-inner .rp-submit-cancel-button span {
@@ -8937,7 +8937,7 @@ md-menu-content md-menu-item.rp-link-menu-item button#context:hover span {
   background-color: transparent !important;
 }
 .rp-night-theme .rp-message-compose-cancel-button {
-  color: #565c64 !important;
+  color: #abb2bf !important;
   background-color: #3e4451 !important;
 }
 .rp-night-theme .rp-message-compose-cancel-button span {
