--- a/rpApp/src/rpNightTheme/styles/rp-night-theme.less
+++ b/rpApp/src/rpNightTheme/styles/rp-night-theme.less
@@ -24,7 +24,7 @@
 
 .rp-night-theme {
   .default-dark-button {
-    color: @dark04 !important;
+    color: @dark05 !important;
     background-color: @dark02 !important;
 
     span {
